--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,8 @@
 
 <div id="navigation">
 	<ul class="navigation">
-		<li><%=link_to "Match Data File",file_match_form_path%></li>
-		<li>Match Single Mass</li>
-		<li>Generate List of Masses</li>
-		<li>Generate Single Mass</li>
+		<li><%=link_to "Match Masses",mass_match_form_path%></li>
+		<li>Generate Masses</li>
 	</ul>
 </div>
 <div id="content">
